tests/errors/implements_error_missing_message.dang
# Implementing Error without the message field it requires. The prelude
# declares `message` as a plain value field (not a zero-arg method), so this
# pins the field-style rendering of the conformance error.
type BrokenError implements Error {
  code: Int!
}
